# fundos_imobiliarios

./: README.md  pyproject.toml
src/extract/: main.py
